Revert "Fixed the Navbar (except Search still misaligned) + Catalog is now the new homepage + Profile (wip)"

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -3,59 +3,39 @@
   position: relative;
   top: 0;
   left: 0;
-  z-index: 1;
-  height: 3em;
-  padding: 2em;
-  background-color: #ffffff;
+  z-index: 2;
+  height: 50px;
+  background-color: #131313;
   user-select: none;
 }
 
-
-.nav-divider {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2.5em;
-  width: 95%;
-
-}
-
 .logo {
-  display: inline-block;
+  display: inline;
   position: relative;
+  top: 12px;
   left: 8%;
-  margin-top: 0.7em;
 }
 
 .logo a {
-  color: #000000;
-  font-size: 30px;
+  color: #ffffff;
+  font-size: 25px;
   text-decoration: none;
-  text-align: -webkit-match-parent;
 }
 
 .logo mat-icon {
   cursor: pointer;
   position: relative;
-  color: #000000;
+  top: 2px;
+  color: #ffffff;
   display: none;
-}
-
-.nav-entries {
-  float: right;
-  display: inline;
-  position: relative;
-  right: 7%;
-}
-
-.nav-entries div {
-  display: inline;
 }
 
 .search-container {
   display: inline-grid;
   position: relative;
+  top: 8px;
   left: calc(30% - 71px);
-  width: 35%;
+  width: 40%;
   grid-template-columns: 12fr;
 }
 
@@ -75,15 +55,30 @@
   grid-column-end: 13;
 }
 
+.nav-entries {
+  float: right;
+  display: inline;
+  position: relative;
+  top: 4px;
+  right: 7%;
+}
+
+.nav-entries div {
+  display: inline;
+}
+
 .my-account {
-  color: #303030;
+  color: #d7d7d7;
   cursor: pointer;
 }
 
 .my-account:hover {
-  color: #000000;
+  color: #ffffff;
 }
 
+.person-outline {
+  display: none;
+}
 
 .my-account h3 {
   display: inline;
@@ -110,24 +105,62 @@
   padding-left: 4px;
   text-decoration: none;
 }
-.person-outline {
-  display: inline;
-  padding-left: 4px;
-  text-decoration: none;
-}
 
 .nav-entry mat-icon {
   position: relative;
   top: 7px;
 }
 
-
-.createListing-btn {
-  border: 1px solid #0000001F;
-  border-radius: 4px;
-  margin-right: 25px;
+.my-account-bg {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
 }
 
+.my-account-content {
+  display: block;
+  visibility: hidden;
+  position: absolute;
+  float: right;
+  z-index: 2;
+  top: 50px;
+  min-width: 200px;
+  margin: 0;
+  background-image: radial-gradient(ellipse farthest-side at center top, #2f2f2f 0%, #131313 100%);
+  border: 1px solid rgba(255,255,255,0.15);
+}
+
+.my-account-content-section {
+  display: block;
+  padding: 4px 0 10px;
+  border-bottom: 1px solid rgba(255,255,255,0.15);
+}
+
+.my-account-content-section a {
+  margin-left: 20px;
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
+}
+
+.my-account-content-section a:hover {
+  color: rgba(255, 255, 255, 1);
+  cursor: pointer;
+}
+
+.my-account-content-section a:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.my-account-content-section mat-icon {
+  position: relative;
+  top: 7px;
+  margin-right: 8px;
+}
 
 @media only screen and (max-width: 1400px) {
   .nav-entries {
@@ -145,7 +178,7 @@
   }
 
   .search-container {
-    left: calc(20% - 25px);
+    left: calc(30% - 25px);
   }
 
   .logo mat-icon {
@@ -165,9 +198,8 @@
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 400px) {
   .search-container {
     left: calc(20% - 25px);
   }
-
 }
